--- a/app/scripts/templates/translation/default.html
+++ b/app/scripts/templates/translation/default.html
@@ -1,4 +1,4 @@
-<b>Subtitle: {{t_subtitle}}</b><br/>
+<b>Subtitle: {{t_servus}}</b><br/>
 Description: {{t_description}}
 <br/><br/>
 <a v-on="click:setTranslation('de')">Deutsch</a><br/>
