--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -1,3 +1,3 @@
 <b>{{langHome}}</b>
-<a v-on="click:setTranslation('de')">Deutsch</a><br/>
-<a v-on="click:setTranslation('en')">English</a><br/>
+<!-- <a v-on="click:setTranslation('de')">Deutsch</a><br/>
+<a v-on="click:setTranslation('en')">English</a><br/> -->
