--- a/app/scripts/templates/translation/default.html
+++ b/app/scripts/templates/translation/default.html
@@ -1,5 +1,5 @@
 <b>Subtitle: {{langSubtitle}}</b><br/>
 Description: {{langDescription}}
 <br/><br/>
-<a v-on="click:setTranslation('de')">Deutsch</a><br/>
-<a v-on="click:setTranslation('en')">English</a><br/>
+<!-- <a v-on="click:setTranslation('de')">Deutsch</a><br/>
+<a v-on="click:setTranslation('en')">English</a><br/> -->
