--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -1,3 +1,1 @@
-<b>{{langHome}}</b> home
-<!-- <a v-on="click:setTranslation('de')">Deutsch</a><br/>
-<a v-on="click:setTranslation('en')">English</a><br/> -->
+<b>{{langHome}}</b>
