added the first client server communication

--- a/app/scripts/templates/translation/default.html
+++ b/app/scripts/templates/translation/default.html
@@ -1,5 +1,8 @@
 <b>Subtitle: {{langSubtitle}}</b><br/>
 Description: {{langDescription}}
 <br/><br/>
+route: {{route}}<br>
+album: {{album}}<br>
+<br/><br/>
 <a v-on="click:setTranslation('de')">Deutsch</a><br/>
 <a v-on="click:setTranslation('en')">English</a><br/>
