added some stuff

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -1,3 +1,9 @@
 <b>{{langHome}}</b><br>
 route: {{route}}<br>
 album: {{album}}<br>
+
+<ul>
+    <li v-repeat="playlist">
+        {{$index}} - {{track.id}} {{track.title}}
+    </li>
+</ul>
