added some more stuff into default.html
+ setTimeout() because of websocket fail

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -1,6 +1,11 @@
 <b>{{langHome}}</b><br>
 route: {{route}}<br>
 album: {{album}}<br>
+title: {{title}}<br>
+artist: {{artist}}<br>
+downvote: {{downvote}}<br>
+id: {{id}}<br>
+length: {{length}}<br>
 
 <ul>
     <li v-repeat="playlist">
