improved data handling + added some placeholder

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -42,3 +42,10 @@ a.current {
 //  CUSTOM STYLES
 // -------------------------------------
 
+// settings site
+#settings{
+    #field-upload-user-image{
+        // display: none;
+    }
+}
+
