--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -1,3 +1,7 @@
-<b>{{langSettings}}</b><br>
-route: {{route}}<br>
-image path: {{userImageUrl}}<br>
+<div id="settings">
+	<b>{{langSettings}}</b><br>
+	route: {{route}}<br>
+	image path: {{userImageUrl}}<br><br><br>
+	<input type="file" class="field-upload-user-image">
+	<button id="start-upload-user-image" v-on="click: uploadUserImage()"></button>
+</div>
