added zeptojs instead of jquery
http://zeptojs.com/ , minified it‘s small and it‘s more modular

--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -2,6 +2,7 @@
 	<b>{{langSettings}}</b><br>
 	route: {{route}}<br>
 	image path: {{userImageUrl}}<br><br><br>
-	<input type="file" class="field-upload-user-image">
-	<button id="start-upload-user-image" v-on="click: uploadUserImage()"></button>
+	<input type="file" id="field-upload-user-image">
+	<button id="start-upload-user-image" v-on="click: uploadUserImage()">Upload</button>
+	<button id="test-button">test</button>
 </div>
