--- a/app/scripts/templates/notfound/404.html
+++ b/app/scripts/templates/notfound/404.html
@@ -1,1 +1,7 @@
-<b>{{langNotfound}}</b>
+<!-- wrapper not found -->
+<div id="notfound">
+	
+	<b>{{langNotfound}}</b>
+
+</div>
+<!-- wrapper not found END -->
