--- a/app/scripts/templates/translation/default.html
+++ b/app/scripts/templates/translation/default.html
@@ -1,5 +1,11 @@
-<b>Subtitle: {{langSubtitle}}</b><br/>
-Description: {{langDescription}}
-<br/><br/>
-<a v-on="click:setTranslation('de')">Deutsch</a><br/>
-<a v-on="click:setTranslation('en')">English</a><br/>
+<!-- wrapper translation -->
+<div id="translation">
+
+	<b>Subtitle: {{langSubtitle}}</b><br/>
+	Description: {{langDescription}}
+	<br/><br/>
+	<a v-on="click:setTranslation('de')">Deutsch</a><br/>
+	<a v-on="click:setTranslation('en')">English</a><br/>
+
+</div>
+<!-- wrapper translation END -->
