--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -45,7 +45,7 @@ a.current {
 // settings site
 #settings{
     #field-upload-user-image{
-        // display: none;
+        display: none;
     }
 }
 
