--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -27,3 +27,5 @@ a.current {
   -webkit-transform: translate3d(-30px, 0, 0);
   transform: translate3d(-30px, 0, 0); }
 
+#settings #field-upload-user-image {
+  display: none; }
