--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -3,7 +3,7 @@
 
 	<b>{{langSettings}}</b><br>
 	route: {{route}}<br>
-	image path: {{userImageUrl}}<br><br><br>
+	image path: <img src="{{userImageUrl}}" width="100"/><br><br><br>
 
 	<!-- upload wrapper single file -->	
 	<div id="upload-wrapper">
