added first admin function

--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -24,5 +24,8 @@
 	</div>
 	<!-- upload wrapper single file END -->	
 
+	<button id="set-internet-access" v-on="click: setInternetAccess">{{internetAccess}}</button>
+
+
 </div>
 <!-- wrapper settings END -->
