--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -25,7 +25,7 @@
 
 	<!-- upload progress state wrapper -->
 	<div id="progress-wrapper" class="{{uploadProgressWrapperStateClass}}">
-		{{uploadProgressValue}}
+		{{uploadProgressImageMessage}}, {{uploadProgressValue}}
 	</div>
 	<!-- upload progress state wrapper END -->
 
