--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -16,6 +16,10 @@ a.current {
     color: blue;
 }
 
+[v-cloak] { 
+    display: none 
+}
+
 // -------------------------------------
 //  SITE CHANGES
 // -------------------------------------
