added downvote level and fixed internet access

--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -31,6 +31,12 @@
 
 	<button id="set-internet-access" v-on="click: setInternetAccess">{{internetAccess}}</button>
 
+	<br/>
+	Downvote Level: {{downvoteLevel}}
+	<br/>
+	<button id="set-downvote-level" v-on="click: setDownvoteLevel(25)">Level "25"</button>
+	<button id="set-downvote-level" v-on="click: setDownvoteLevel(50)">Level "50"</button>
+	<button id="set-downvote-level" v-on="click: setDownvoteLevel(75)">Level "75"</button>
 
 </div>
 <!-- wrapper settings END -->
