--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -32,7 +32,6 @@
 
 .view {
     position: absolute;
-    margin-top: 50px;
     opacity: 1;
     -webkit-transition: all .2s ease;
     transition: all .2s ease;
@@ -63,6 +62,7 @@
     ul#navigation{
         list-style-type: none;
         background-color: blue;
+        height: 50px;
         li{
             float:left;
             a{
