fixed image handling (template)

--- a/app/scripts/templates/home/default.html
+++ b/app/scripts/templates/home/default.html
@@ -14,7 +14,7 @@
 
 		<!-- right side -->
 		<div id="right">
-			<div id="dj-image" style="background-image: url('{{image}}');"></div>
+			<div id="dj-image" v-style="background-image: 'url(' + image + ')';"></div>
 		</div>
 		<!-- right side END -->
 	</div>
