--- a/app/scripts/templates/settings/default.html
+++ b/app/scripts/templates/settings/default.html
@@ -1,9 +1,11 @@
 <!-- wrapper settings -->
 <div id="settings">
 
-	<b>{{langSettings}}</b><br>
-	route: {{route}}<br>
-	image path:  <img v-cloak v-attr="src:userImageUrl" width="100"/><br><br><br>
+	<!-- dj wrapper -->
+	<div id="dj-wrapper">
+		<div id="dj-image" v-style="background-image: 'url(' + userImageUrl + ')';"></div>
+	</div>
+	<!-- dj wrapper END -->
 
 	<!-- upload wrapper single file -->	
 	<div id="upload-wrapper">
@@ -18,8 +20,6 @@
 		<div id="file-control-wrapper" class="{{fileControlStateClass}}">
 			<button id="upload-file" v-on="click: removeFile()">remove file</button>
 		</div>
-		
-	
 	</div>
 	<!-- upload wrapper single file END -->
 
