uncommented init app loader

--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -67,7 +67,7 @@
     //  initalize app
     // -------------------------------------
     #inital-loader-wrapper{
-        // position: fixed; // uncomment if app is production ready
+        position: fixed; // uncomment if app is production ready
         z-index: 9999;
         top: 0;
         right: 0;
