--- a/app/styles/scss/main.scss
+++ b/app/styles/scss/main.scss
@@ -34,6 +34,28 @@
 }
 
 // -------------------------------------
+//  CLEARFIX
+// -------------------------------------
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+.clearfix {
+    display: inline-block;
+}
+html[xmlns] .clearfix {
+    display: block;
+}
+* html .clearfix {
+    height: 1%;
+}
+
+// -------------------------------------
 //  SITE CHANGES
 // -------------------------------------
 
@@ -180,7 +202,31 @@
                 line-height: 50px;
                 text-align: center;
             }
+        }
 
+        #playlist-wrapper{
+            width: 260px;
+            height: 150px;
+            background-color: orange;
+
+            #upload-wrapper{
+                padding: 15px;
+                width: 100px;
+                height: 100px;
+            }
+            #progress-wrapper{
+                position: absolute;
+                left: 5px;
+                right: 5px;
+                top: 5px;
+                bottom: 5px;
+                border-radius: 10px;
+                border: 1px solid gray;
+                background-color: #ffffff;
+            }
+            .hide{ 
+                display: none;
+            }
         }
 
     }
